# fixed

./: Cargo.toml  README.md  RELEASES.md  build.rs
etc/: appveyor.yml  fixed.svg.b64  gitlab-ci.yml
src/: arith.rs  borshize.rs  bytes.rs  cast.rs  cmp.rs  cmp_fixed.rs  consts.rs  convert.rs  debug_hex.rs  defmt.rs  display.rs  f128.rs  fixed_from_bits.rs  float_helper.rs  from_str.rs  helpers.rs  hypot.rs  impl_arbitrary.rs  impl_bytemuck.rs  impl_num_traits.rs  int256.rs  int_helper.rs  inv_lerp.rs  lerp.rs  lib.rs  log.rs  log10.rs  macros.rs  macros_const.rs  macros_frac.rs  macros_from_to.rs  macros_no_frac.rs  macros_round.rs  prim_traits.rs  saturating.rs  serdeize.rs  sqrt.rs  traits.rs  traits_bits.rs  unwrapped.rs  (+1 more)
src/types/: extra.rs  mod.rs
